--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -825,7 +825,7 @@ script:
           else:
             - delay: 50ms
       - lambda: |-
-          ESP_LOGD("button", "Dimming led_index %d back to %d, %d, %d", led_index, id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
+          //ESP_LOGD("button", "Dimming led_index %d back to %d, %d, %d", led_index, id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
           // fade to original_color
           int r1=0, g1=0, b1=0;
           float factor = iteration * 0.1f;
@@ -833,6 +833,7 @@ script:
           g1 = id(button_color)[1]*(1.0-factor) + id(original_led_color).g*factor;
           b1 = id(button_color)[2]*(1.0-factor) + id(original_led_color).b*factor;
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
+          ESP_LOGD("button", "Dimming led_index %d to %d, %d, %d", led_index, r1, g1, b1);
           target_led->get(led_index).set(esphome::Color(r1, g1, b1));
           target_led->schedule_show();
           if (iteration<=10) {
