--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -696,6 +696,96 @@ sun:
 
 script:
 
+  - id: get_led_and_button_at_x
+    mode: restart
+    parameters:
+      x: int
+      result: int[]
+    then:
+      - lambda: |-
+          int button = 0;
+          int led_index = 0;
+          if (${relay_count}==4) {
+            switch (x) {
+              case 1:
+              case 2:
+                  button = 1;
+                  led_index = 12;
+                  break;
+              case 3:
+              case 4:
+              case 5:
+                    button = 2;
+                    led_index = 10;
+                    break;
+              case 6:
+              case 7:
+              case 8:
+                    button = 3;
+                    led_index = 8;
+                    break;
+              case 9:
+              case 10:
+                  button = 4;
+                  led_index = 6;
+                  break;
+              default:
+                ESP_LOGW("script", "Unexpected X: %d", x);
+                return;
+            } else if (${relay_count}==3) {
+              switch (x) {
+              case 1:
+              case 2:
+              case 3:
+                  button = 1;
+                  led_index = 11;
+                  break;
+              case 4:
+              case 5:
+              case 6:
+                    button = 2;
+                    led_index = 9;
+                    break;
+              case 7:
+              case 8:
+              case 9:
+              case 10:
+                    button = 3;
+                    led_index = 7;
+                    break;
+              default:
+                ESP_LOGW("script", "Unexpected X: %d", x);
+                return;
+            }
+          } else if (${relay_count}==2) {
+              switch (x) {
+              case 1:
+              case 2:
+              case 3:
+              case 4:
+              case 5:
+                  button = 1;
+                  led_index = 11;
+                  break;
+              case 6:
+              case 7:
+              case 8:
+              case 9:
+              case 10:
+                  button = 2;
+                  led_index = 7;
+                  break;
+              default:
+                ESP_LOGW("script", "Unexpected X: %d", x);
+                return;
+            } else {
+              button = 1;
+              led_index = 9;
+            }
+            result[0] = led_index;
+            result[1] = button;
+          }
+
   - id: button_pressed_old
     mode: restart
     parameters:
@@ -774,9 +864,12 @@ script:
       x: int
     then:
       - lambda: |-
-          int button = 0;
-          int led_index = 0;
+          std:vector<int> result{0, 0};
+          id(get_led_and_button_at_x)->execute(0, result);
+          int led_index = result[0];
+          int button = result[1];
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
+          /*
           switch (x) {
             case 1:
             case 2:
@@ -804,6 +897,7 @@ script:
               ESP_LOGW("script", "Unexpected X: %d", x);
               return;
           }
+          */
           ESP_LOGD("button", "resolved X %d to button %d at led %d", x, button, led_index);
           id(original_led_color) = target_led->get(led_index).get();
           ESP_LOGD("button", "Button %d color was %d, %d, %d", button, id(original_led_color).r, id(original_led_color).g, id(original_led_color).b);
