--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -66,8 +66,6 @@ substitutions:
 esphome:
   name: ${name}
   friendly_name: ${friendly_name}
-  includes:
-    - ../includes/util.h
   project:
     name: smarthomeyourself.tx_ultimate
     version: "1.0"
@@ -697,6 +695,98 @@ sun:
 
 
 script:
+# this script doesn't work because pass by reference return in result array doesn't work
+# this code could be moved into a .h include if I knew how :/
+  - id: get_led_and_button_at_x
+    mode: restart
+    parameters:
+      x: int
+      result: int[]
+    then:
+      - lambda: |-
+          int button = 0;
+          int led_index = 0;
+          if (${relay_count}==4) {
+            switch (x) {
+              case 1:
+              case 2:
+                  button = 1;
+                  led_index = 12;
+                  break;
+              case 3:
+              case 4:
+              case 5:
+                  button = 2;
+                  led_index = 10;
+                  break;
+              case 6:
+              case 7:
+              case 8:
+                  button = 3;
+                  led_index = 8;
+                  break;
+              case 9:
+              case 10:
+                  button = 4;
+                  led_index = 6;
+                  break;
+              default:
+                ESP_LOGW("script", "Unexpected X: %d", x);
+                return;
+              }
+          } else if (${relay_count}==3) {
+            switch (x) {
+              case 1:
+              case 2:
+              case 3:
+                  button = 1;
+                  led_index = 11;
+                  break;
+              case 4:
+              case 5:
+                  led_index = 9;
+                  break;
+              case 7:
+              case 8:
+              case 9:
+              case 10:
+                  button = 3;
+                  led_index = 7;
+                  break;
+              default:
+                ESP_LOGW("script", "Unexpected X: %d", x);
+                return;
+            }
+          } else if (${relay_count}==2) {
+            switch (x) {
+              case 1:
+              case 2:
+              case 3:
+              case 4:
+              case 5:
+                  button = 1;
+                  led_index = 11;
+                  break;
+              case 6:
+              case 7:
+              case 8:
+              case 9:
+              case 10:
+                  button = 2;
+                  led_index = 7;
+                  break;
+              default:
+                ESP_LOGW("script", "Unexpected X: %d", x);
+                return;
+            }
+          } else {
+            button = 1;
+            led_index = 9;
+          }
+          result[0] = led_index;
+          result[1] = button;
+          ESP_LOGD("button", "in new method: resolved X %d to button %d at led %d", x, button, led_index);
+
   - id: button_pressed
     mode: parallel
     parameters:
