--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -601,7 +601,7 @@ tx_ultimate_touch:
     - lambda: |-
         uint32_t long_press_duration = millis() - id(button_press_start_time)[id(g_button)-1];
         ESP_LOGD("button", "Button %d held for %u ms", id(g_button), long_press_duration);
-        if (long_press_duration >= {long_press_time}) {
+        if (long_press_duration >= ${long_press_time}) {
           id(long_press).publish_state(true);
         }
         id(recursive_button_pressed)->execute(0, id(g_led_index), id(g_button));
