--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -1127,21 +1127,45 @@ script:
   - id: led_on_swipe_left
     mode: restart
     then:
-      - script.execute: led_on_button_press(9)
+      - script.execute
+        id: led_on_button_press
+        x: 9
       - delay: 50ms
-      - script.execute: led_on_button_press(6)
+      - script.execute
+        id: led_on_button_press
+        x: 6
       - delay: 50ms
-      - script.execute: led_on_button_press(4)
+      - script.execute
+        id: led_on_button_press
+        x: 4
       - delay: 50ms
-      - script.execute: led_on_button_press(2)
+      - script.execute
+        id: led_on_button_press
+        x: 2
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 9, 4)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 9
+        button: 4
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 6, 3)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 6
+        button: 3
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 4, 2)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 4
+        button: 2
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 2, 1)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 2
+        button: 1
 #     - light.turn_on:
 #         id: leds_top
 #         brightness: ${swipe_left_brightness}
@@ -1153,21 +1177,45 @@ script:
   - id: led_on_swipe_right
     mode: restart
     then:
-      - script.execute: led_on_button_press(2)
+      - script.execute
+        id: led_on_button_press
+        x: 2
       - delay: 50ms
-      - script.execute: led_on_button_press(4)
+      - script.execute
+        id: led_on_button_press
+        x: 4
       - delay: 50ms
-      - script.execute: led_on_button_press(6)
+      - script.execute
+        id: led_on_button_press
+        x: 6
       - delay: 50ms
-      - script.execute: led_on_button_press(9)
+      - script.execute
+        id: led_on_button_press
+        x: 9
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 2, 1)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 2
+        button: 1
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 4, 2)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 4
+        button: 2
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 6, 3)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 6
+        button: 3
       - delay: 50ms
-      - script.execute: led_dim_button_release(0, 9, 4)
+      - script.execute
+        id: led_dim_button_release
+        iteration: 0
+        led_index: 9
+        button: 4
 #     - light.turn_on:
 #         id: leds_top
 #         brightness: ${swipe_right_brightness}
