--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -140,7 +140,8 @@ external_components:
 #  - source: /config/esphome/my_components
   - source:
       type: git
-      url: https://github.com/SmartHome-yourself/sonoff-tx-ultimate-for-esphome
+      url: https://github.com/duncati/sonoff-tx-ultimate-for-esphome
+#     url: https://github.com/SmartHome-yourself/sonoff-tx-ultimate-for-esphome
       ref: main
     components: [tx_ultimate_touch]
 
