--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -594,7 +594,7 @@ tx_ultimate_touch:
 
   on_release:
     - lambda: |-
-        auto led_and_button  = get_led_and_button_at_x(x, ${relay_count});
+        auto led_and_button  = get_led_and_button_at_x(touch.x, ${relay_count});
         int led_index = led_and_button[0];
         int button = led_and_button[1];
         uint32_t long_press_duration = millis() - id(button_press_start_time)[button-1];
