--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -709,16 +709,20 @@ script:
           condition:
             lambda: |-
               if (iteration == 0) {
-                ESP_LOGD("button", "Dimming button %d at LED %d", button, led_index);
+                ESP_LOGD("button", "Dimming button %d at LED %d to %d %d %d", button, led_index, 
+                  id(original_led_color)[button-1].r,
+                  id(original_led_color)[button-1].g,
+                  id(original_led_color)[button-1].b);
+                  return true;
               }
-              return iteration == 0;
+              return false;
           then:
             - delay: 1s
           else:
             - delay: 50ms
       - lambda: |-
           auto original_color = id(original_led_color)[button-1];
-          //ESP_LOGD("button", "Button %d color was %d, %d, %d", button, original_color.r, original_color.g, original_color.b);
+          ESP_LOGD("button", "Button %d color was %d, %d, %d", button, original_color.r, original_color.g, original_color.b);
           // fade to original_color
           int r1=0, g1=0, b1=0;
           float factor = iteration * 0.1f;
@@ -726,7 +730,7 @@ script:
           g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
           b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-          //ESP_LOGD("button", "Dimming led_index %d to %d, %d, %d", led_index, r1, g1, b1);
+          ESP_LOGD("button", "Dimming led_index %d to %d, %d, %d", led_index, r1, g1, b1);
           target_led->get(led_index).set(esphome::Color(r1, g1, b1));
           target_led->schedule_show();
           if (iteration<10) {
