--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -602,7 +602,6 @@ tx_ultimate_touch:
         if (button_press_duration >= ${long_press_time}) {
           id(long_press).publish_state(true);
           ESP_LOGD("button", "Button %d long pressed", button);
-          // TODO send long press event to HA
           id(vibra).turn_on();
         }
         id(led_dim_button_release)->execute(0, led_index, button);
@@ -698,7 +697,7 @@ script:
             ESP_LOGD("button", "resolved X %d to button %d at LED %d, color was %d %d %d", x, button, led_index, original_color.r, original_color.g, original_color.b);
             id(original_led_color)[button-1] = original_color;
           } else {
-            ESP_LOGD("button", "resolved X %d to button %d at LED %d, button pressed before fade completed", x, button, led_index);
+            ESP_LOGI("button", "resolved X %d to button %d at LED %d, button pressed before fade completed", x, button, led_index);
           }
           id(button_press_start_time)[button-1] = millis();
 
@@ -729,7 +728,6 @@ script:
             - delay: 50ms
       - lambda: |-
           auto original_color = id(original_led_color)[button-1];
-          ESP_LOGD("button", "Button %d color was %d, %d, %d", button, original_color.r, original_color.g, original_color.b);
           // fade to original_color
           int r1=0, g1=0, b1=0;
           float factor = iteration * 0.1f;
@@ -737,7 +735,7 @@ script:
           g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
           b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
           esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-          ESP_LOGD("button", "Dimming led_index %d to %d, %d, %d", led_index, r1, g1, b1);
+          //ESP_LOGD("button", "Dimming button %d (LED %d) to %d, %d, %d", button, led_index, r1, g1, b1);
           target_led->get(led_index).set(esphome::Color(r1, g1, b1));
           target_led->schedule_show();
           if (iteration<10) {
