--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -707,42 +707,33 @@ script:
   - id: led_dim_button_release
     mode: parallel
     parameters:
-      iteration: int
       led_index: int
       button: int
     then:
-      - if:
-          condition:
-            lambda: |-
-              if (iteration == 0) {
-                ESP_LOGD("button", "Dimming button %d at LED %d to %d %d %d", button, led_index, 
-                  id(original_led_color)[button-1].r,
-                  id(original_led_color)[button-1].g,
-                  id(original_led_color)[button-1].b);
-                  return true;
-              }
-              return false;
-          then:
-            - delay: 1s
-          else:
-            - delay: 50ms
       - lambda: |-
-          auto original_color = id(original_led_color)[button-1];
-          // fade to original_color
-          int r1=0, g1=0, b1=0;
-          float factor = iteration * 0.1f;
-          r1 = id(button_color)[0]*(1.0-factor) + original_color.r*factor;
-          g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
-          b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
-          esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-          ESP_LOGD("button", "Dimming button %d iteration (LED %d) to %d, %d, %d", button, iteration, led_index, r1, g1, b1);
-          target_led->get(led_index).set(esphome::Color(r1, g1, b1));
-          target_led->schedule_show();
-          if (iteration<10) {
-            id(led_dim_button_release)->execute(iteration+1, led_index, button);
-          } else {
-            id(button_press_start_time)[button-1] = 0;
-          }
+          ESP_LOGD("button", "Dimming button %d at LED %d to %d %d %d", button, led_index, 
+            id(original_led_color)[button-1].r,
+            id(original_led_color)[button-1].g,
+            id(original_led_color)[button-1].b);
+      - delay: 1s
+      - repeat:
+          count: 10
+          then:
+            - lambda: |-
+                auto original_color = id(original_led_color)[button-1];
+                // fade to original_color
+                int r1=0, g1=0, b1=0;
+                int iteration = loop.index;
+                float factor = iteration * 0.1f;
+                r1 = id(button_color)[0]*(1.0-factor) + original_color.r*factor;
+                g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
+                b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
+                esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
+                ESP_LOGD("button", "Dimming button %d iteration (LED %d) to %d, %d, %d", button, iteration, led_index, r1, g1, b1);
+                target_led->get(led_index).set(esphome::Color(r1, g1, b1));
+                target_led->schedule_show();
+            - delay: 50ms
+        - lambda: 'id(button_press_start_time)[button-1] = 0;'
 
   - id: refresh_nightlight
     mode: restart
