--- a/tx_ultimate.yaml
+++ b/tx_ultimate.yaml
@@ -604,7 +604,7 @@ tx_ultimate_touch:
           ESP_LOGD("button", "Button %d long pressed", button);
           id(vibra).turn_on();
         }
-        id(led_dim_button_release)->execute(0, led_index, button);
+        id(led_dim_button_release)->execute(led_index, button);
     - script.execute:
         id: handle_release
         pos: !lambda "return touch.x;"
@@ -723,12 +723,13 @@ script:
                 auto original_color = id(original_led_color)[button-1];
                 // fade to original_color
                 int r1=0, g1=0, b1=0;
-                float factor = loop.index * 0.1f;
+                int iteration = loop.index;
+                float factor = iteration * 0.1f;
                 r1 = id(button_color)[0]*(1.0-factor) + original_color.r*factor;
                 g1 = id(button_color)[1]*(1.0-factor) + original_color.g*factor;
                 b1 = id(button_color)[2]*(1.0-factor) + original_color.b*factor;
                 esphome::light::AddressableLight* target_led = static_cast<esphome::light::AddressableLight *>(id(all_leds).get_output());
-                ESP_LOGD("button", "Dimming button %d iteration (LED %d) to %d, %d, %d", button, loop.index, led_index, r1, g1, b1);
+                ESP_LOGD("button", "Dimming button %d iteration (LED %d) to %d, %d, %d", button, iteration, led_index, r1, g1, b1);
                 target_led->get(led_index).set(esphome::Color(r1, g1, b1));
                 target_led->schedule_show();
             - delay: 50ms
